fixed double border

--- a/src/components/20-molecules/accordeon/index.scss
+++ b/src/components/20-molecules/accordeon/index.scss
@@ -1,8 +1,7 @@
 .m-accordeon {
-  display: block;
+display: block;
 
   &__container {
-    border-top: solid 1px $color-silver;
     border-bottom: solid 1px $color-silver;
   }
 
